--- a/scss/sections/__home.scss
+++ b/scss/sections/__home.scss
@@ -6,9 +6,16 @@
     position: relative;
     background-image: url(../images/banners/bannerhome.png);
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     background-attachment: fixed;
     background-position: center;
 
+    @media screen and (max-width: $bp-SM){
+        background-attachment: scroll;
+    }
 
     &__caption {
         display: flex;
